[package]
name = "epp-proxy"
version = "0.6.0"
authors = ["Q <q@misell.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "io-util", "fs", "signal", "parking_lot"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
libc = "0.2"
openssl = { version = "0.10", features = [] }
openssl-sys = { version = "=0.9.93", features = [] }
tokio-openssl = "0.6"
quick-xml = { version = "0.31", features = ["serialize"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.1", features = ["v4"] }
hex = "0.4"
regex = "1"
tonic = { version = "0.11", features = ["transport", "tls"] }
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
clap = { version = "4", features = ["env"] }
base64 = "0.21"
xml_serde = "1"
rust-keycloak = { git = "https://github.com/TheEnbyperor/rust-keycloak", rev = "1f81e41407a1fa123131c2f4d213609165ac8b34" }
#rust-keycloak = { path = "../rust-keycloak" }
dotenv = "0.15.0"
tower-service = "0.3"
http = "0.2"
sys-info = "0.9"
sentry = { version = "0.32", features = ["log"] }
foreign-types-shared = "0.1"
lazy_static = "1"
paste = "1"
reqwest = "0"
nanoid = "0"
aws-sdk-s3 = "1"
aws-credential-types = "1"
prometheus = "0.13.3"
warp = "0.3.6"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2"

[build-dependencies]
tonic-build = "0.11"
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
test-log = "0.2"
env_logger = "0.11"

[patch.crates-io]
openssl-sys = { git = "https://github.com/AS207960/rust-openssl", rev = "1da47a7e9af19a40d5752cb7f5bd25af982b6541" }
#openssl-sys = { path = "../rust-openssl/openssl-sys" }

[lib]
name = "epp_proxy"
path = "src/lib.rs"

[[bin]]
name = "epp-proxy"
path = "src/main.rs"

[[bin]]
name = "verisign-com-net-test"
path = "src/bin/verisign-com-net-test.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
